# ComfyUI_Spectral

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
nodes/: calculate.py  kmeans.py  load_envi.py  load_spectral.py  plot.py
utils/: preprocess.py
workflows/: example_01.json  example_02.json
